MigracionObjeto/force-app/main/default/objects/PEP__c/PEP__c.object-meta.xml
<CustomObject>
    <label>PEP</label>
    <nameField>
        <label>Nombre de PEP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PEPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>