MigracionObjeto/force-app/main/default/objects/PEP__c/fields/Categoria_PEP__c.field-meta.xml
<CustomField>
    <fullName>Categoria_PEP__c</fullName>
    <label>Categoria PEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Interno</fullName>
            </value>
            <value>
                <fullName>Recambio</fullName>
            </value>
            <value>
                <fullName>Indisponibilidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>