MigracionObjeto/force-app/main/default/objects/PEP__c/fields/Categoriatxt__c.field-meta.xml
<CustomField>
    <fullName>Categoriatxt__c</fullName>
    <formula>text( Categoria_PEP__c )</formula>
    <label>Categoriatxt</label>
    <type>Text</type>
</CustomField>