MigracionObjeto/force-app/main/default/objects/PEP__c/fields/IDP_18__c.field-meta.xml
<CustomField>
    <fullName>IDP_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>IDP_18</label>
    <type>Text</type>
</CustomField>