MigracionObjeto/force-app/main/default/objects/PEP__c/validationRules/VP01_ValidacionPEP_01.validationRule-meta.xml
<ValidationRule>
    <fullName>VP01_ValidacionPEP_01</fullName>
    <active>true</active>
    <description>Validacion para que el pep si es de C1 tenga categoria oblgatoria</description>
    <errorConditionFormula>AND( 
    TEXT(Categoria_PEP__c)= NULL,
    BEGINS(Name , &quot;C1&quot;)
    )</errorConditionFormula>
    <errorDisplayField>Categoria_PEP__c</errorDisplayField>
    <errorMessage>Para todos los pep de la División C1, debe indicar la categoria (Cod:VP01)</errorMessage>
</ValidationRule>