MigracionObjeto/force-app/main/default/objects/PEP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cuenta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>